--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Travel</title>
 </head>
 
-<body>
+<body >
+    <div class="bg-tambah"></div>
     <div class="wrapper">
         <div class="search-input">
             <a href="" target="_blank" hidden></a>
@@ -39,22 +40,27 @@
                     <div class="inner">
                         <img class="card-img-top" src="pulau-padar.jpg" alt="">
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="height: 20rem; position: relative;">
                         <h3 id="destinasi" class="card-title text-center">Kerjasan</h3>
                         <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Photography</li>
+                        <ul id="isi-menu" style="padding-left: 0%;">
                             <li>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
                             </li>
+                            <div class="deskripsi">
+                                <p style="text-align: justify;">Wisata Wisata Wisata Wisata Wisata Wisata Wisata Wisata
+                                    Wisata Wisata menarik A6 gokilWisata menarik A6 gokilWisata
+                                    menarik A6 gokil keren muantapp menyenangkan menghibur gokil2 keren2 muantap2.</p>
+                            </div>
                         </ul>
+                        <b style="color: grey; font-size: 80%;">Photography, Kudus, Jawa Tengah</b>
                         </p>
-                        <div class="card-footer text-center">
+                        <div class="card-footer text-center"
+                            style="margin: auto 5px 5px 5px; position: absolute; bottom: 0%; left: 0%; right: 0%;">
                             <a href="#" class="btn btn-success">Open</a>
                         </div>
                     </div>
@@ -63,14 +69,12 @@
             <div class="col-md-4 filterDiv nature" style="margin-bottom: 20px;">
                 <div class="card shadow">
                     <div class="inner">
-                        <img class="card-img-top" src="pulau-padar.jpg" alt="">
+                        <img class="card-img-top" src="gmb7.jpeg" alt="">
                     </div>
-                    <div class="card-body">
-                        <h3 id="destinasi" class="card-title text-center">Gebog</h3>
+                    <div class="card-body" style="height: 20rem; position: relative;">
+                        <h3 id="destinasi" class="card-title text-center">Montel</h3>
                         <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Nature</li>
+                        <ul id="isi-menu" style="padding-left: 0%;">
                             <li>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -78,9 +82,16 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                             </li>
+                            <div style="overflow-y: scroll; scrollbar-width: none; height: 120px; margin-top: 10px;">
+                                <p style="text-align: justify;">Wisata Wisata Wisata Wisata Wisata Wisata Wisata Wisata
+                                    Wisata Wisata menarik A6 gokilWisata menarik A6 gokilWisata
+                                    menarik A6 gokil keren muantapp menyenangkan menghibur gokil2 keren2 muantap2.</p>
+                            </div>
                         </ul>
+                        <b style="color: grey; font-size: 80%;">Nature, Kudus, Jawa Tengah</b>
                         </p>
-                        <div class="card-footer text-center">
+                        <div class="card-footer text-center"
+                            style="margin: auto 5px 5px 5px; position: absolute; bottom: 0%; left: 0%; right: 0%;">
                             <a href="#" class="btn btn-success">Open</a>
                         </div>
                     </div>
@@ -89,24 +100,29 @@
             <div class="col-md-4 filterDiv adventure" style="margin-bottom: 20px;">
                 <div class="card shadow">
                     <div class="inner">
-                        <img class="card-img-top" src="pulau-padar.jpg" alt="">
+                        <img class="card-img-top" src="gmb3.jpg" alt="">
                     </div>
-                    <div class="card-body">
-                        <h3 id="destinasi" class="card-title  text-center">Jekulo</h3>
+                    <div class="card-body" style="height: 20rem; position: relative;">
+                        <h3 id="destinasi" class="card-title text-center">Bukit Puteran</h3>
                         <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Adventure</li>
+                        <ul id="isi-menu" style="padding-left: 0%;">
                             <li>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
                             </li>
+                            <div style="overflow-y: scroll; scrollbar-width: none; height: 120px; margin-top: 10px;">
+                                <p style="text-align: justify;">Wisata Wisata Wisata Wisata Wisata Wisata Wisata Wisata
+                                    Wisata Wisata menarik A6 gokilWisata menarik A6 gokilWisata
+                                    menarik A6 gokil keren muantapp menyenangkan menghibur gokil2 keren2 muantap2.</p>
+                            </div>
                         </ul>
+                        <b style="color: grey; font-size: 80%;">Adventure, Kudus, Jawa Tengah</b>
                         </p>
-                        <div class="card-footer text-center">
+                        <div class="card-footer text-center"
+                            style="margin: auto 5px 5px 5px; position: absolute; bottom: 0%; left: 0%; right: 0%;">
                             <a href="#" class="btn btn-success">Open</a>
                         </div>
                     </div>
@@ -115,76 +131,27 @@
             <div class="col-md-4 filterDiv culture" style="margin-bottom: 20px;">
                 <div class="card shadow">
                     <div class="inner">
-                        <img class="card-img-top" src="pulau-padar.jpg" alt="">
+                        <img class="card-img-top" src="gmb6.jpg" alt="">
                     </div>
-                    <div class="card-body">
-                        <h3 id="destinasi" class="card-title  text-center">Colo</h3>
+                    <div class="card-body" style="height: 20rem; position: relative;">
+                        <h3 id="destinasi" class="card-title text-center">Masjid Menara</h3>
                         <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Culture</li>
-                            <li>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </li>
-                        </ul>
-                        </p>
-                        <div class="card-footer text-center">
-                            <a href="#" class="btn btn-success">Open</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 filterDiv photography" style="margin-bottom: 20px;">
-                <div class="card shadow">
-                    <div class="inner">
-                        <img class="card-img-top" src="pulau-padar.jpg" alt="">
-                    </div>
-                    <div class="card-body">
-                        <h3 id="destinasi" class="card-title  text-center">GOR Kudus</h3>
-                        <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Photography</li>
-                            <li>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </li>
-                        </ul>
-                        </p>
-                        <div class="card-footer text-center">
-                            <a href="#" class="btn btn-success">Open</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 filterDiv adventure" style="margin-bottom: 20px;">
-                <div class="card shadow">
-                    <div class="inner">
-                        <img class="card-img-top" src="pulau-padar.jpg" alt="">
-                    </div>
-                    <div class="card-body">
-                        <h3 id="destinasi" class="card-title  text-center">Natas Angin</h3>
-                        <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Adventure</li>
+                        <ul id="isi-menu" style="padding-left: 0%;">
                             <li>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
                             </li>
+                            <div style="overflow-y: scroll; scrollbar-width: none; height: 120px; margin-top: 10px;">
+                                <p style="text-align: justify;">muantapp menyenangkan menghibur gokil2 keren2 muantap2.</p>
+                            </div>
                         </ul>
+                        <b style="color: grey; font-size: 80%;">Culture, Kudus, Jawa Tengah</b>
                         </p>
-                        <div class="card-footer text-center">
+                        <div class="card-footer text-center"
+                            style="margin: auto 5px 5px 5px; position: absolute; bottom: 0%; left: 0%; right: 0%;">
                             <a href="#" class="btn btn-success">Open</a>
                         </div>
                     </div>
@@ -193,24 +160,29 @@
             <div class="col-md-4 filterDiv culture" style="margin-bottom: 20px;">
                 <div class="card shadow">
                     <div class="inner">
-                        <img class="card-img-top" src="pulau-padar.jpg" alt="">
+                        <img class="card-img-top" src="rejenu.jpg" alt="">
                     </div>
-                    <div class="card-body">
-                        <h3 id="destinasi" class="card-title  text-center">Masjid Menara</h3>
+                    <div class="card-body" style="height: 20rem; position: relative;">
+                        <h3 id="destinasi" class="card-title text-center">Rejenu</h3>
                         <p class="card-text">
-                        <ul>
-                            <li id="kota">Kudus, Jawa Tengah</li>
-                            <li>Culture</li>
+                        <ul id="isi-menu" style="padding-left: 0%;">
                             <li>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
                             </li>
+                            <div style="overflow-y: scroll; scrollbar-width: none; height: 120px; margin-top: 10px;">
+                                <p style="text-align: justify;">Wisata Wisata Wisata Wisata Wisata Wisata Wisata Wisata
+                                    Wisata Wisata menarik A6 gokilWisata menarik A6 gokilWisata
+                                    menarik A6 gokil keren muantapp menyenangkan menghibur gokil2 keren2 muantap2.</p>
+                            </div>
                         </ul>
+                        <b style="color: grey; font-size: 80%;">Culture, Kudus, Jawa Tengah</b>
                         </p>
-                        <div class="card-footer text-center">
+                        <div class="card-footer text-center"
+                            style="margin: auto 5px 5px 5px; position: absolute; bottom: 0%; left: 0%; right: 0%;">
                             <a href="#" class="btn btn-success">Open</a>
                         </div>
                     </div>
